# Sentinel

./: LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  sentinelboot.service  sentinelroot.service  sentineltrain.service  setup.py  uninstall.sh
sentinelroot/: binary_features.py  boot_protect.py  db.py  dmesg_viewer.py  malicious_ips.json  ml.py  report.py  sentinel.py  train.py  tui.py  update_signatures.py
src/: CMakeLists.txt  main.cpp  sentinel.c
